// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MenuList should match snapshot when Menu is closed 1`] = `
<div
  className="jsx-2435928121 jsx-1915852374"
>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Home
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Browse
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Login
  </button>
</div>
`;

exports[`components/MenuList should match snapshot when Menu is open 1`] = `
<div
  className="jsx-2435928121 jsx-838536390"
>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Home
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Browse
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
  >
    Login
  </button>
</div>
`;
